--- a/index.html
+++ b/index.html
@@ -386,6 +386,19 @@
         </ul>
 
     </div>
+    <div class="footer=subscribe">
+        <p class="footer=subscribe-title">Subscribe</p>
+        <form name="footer-form">
+            <label class="form-label">
+                <input class="form-input" type="email" name="email" placeholder="E=mail" />
+            </label>
+                <button class="form-button" type="submit">Subscribe
+                    <svg class="footer=subscribe-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+                </button>
+        </form>
+    </div>
 
 </div>
  </footer>
