--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
         <form name="footer-form">
             <div class="footer-group">
             <label class="form-label">
-                <input class="form-input" type="email" name="email" placeholder="E-mail" required />
+                <input class="footer-form-input" type="email" name="email" placeholder="E-mail" required />
                 </label>
                 <button class="form-button" type="submit">Subscribe
                     <svg class="footer-subscribe-icon" width="24" height="24">
@@ -404,5 +404,56 @@
 
 </div>
  </footer>
+
+<div class="backdrop is-open">
+<div class="modal">
+  <button class="modal-close" type="button">
+    <svg class="modal-close-svg" width="8" height="8">
+      <use href="./images/icons.svg#icon-close"></use>
+    </svg>
+  </button>
+<p class="modal-text">Leave your contacts and we will call you back</p>
+<form class="modal-form">
+    <div class="form-field">
+        <label class="modal-label" for="username">Name</label>
+          <div class="input-wrapper">
+            <input class="form-input" name="username" id="username" type="text" />
+             <svg class="form-icon" width="18" height="24">
+               <use href="./images/icons.svg#icon-person"></use>
+             </svg>
+          </div>
+    </div>
+    <div class="form-field">
+        <label class="modal-label" for="usertel">Phone</label>
+          <div class="input-wrapper">
+            <input class="form-input" name="usertel" id="username" type="tel" />
+             <svg class="form-icon" width="18" height="24">
+               <use href="./images/icons.svg#icon-phone"></use>
+             </svg>
+          </div>
+    </div>
+    <div class="form-field">
+        <label class="modal-label" for="useremail">Email</label>
+          <div class="input-wrapper">
+            <input class="form-input" name="useremail" id="useremail" type="email" />
+              <svg class="form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+          </div>
+    </div>
+
+
+
+
+
+
+  <button class="primary-btn" type="submit">Send</button>
+</form>
+
+
+</div>
+
+</div>
+
 </body>
 </html>
