--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     <div class="form-field">
         <label class="modal-label" for="usertel">Phone</label>
           <div class="input-wrapper">
-            <input class="form-input" name="usertel" id="username" type="tel" />
+            <input class="form-input" name="usertel" id="usertel" type="tel" />
              <svg class="form-icon" width="18" height="24">
                <use href="./images/icons.svg#icon-phone"></use>
              </svg>
@@ -441,6 +441,11 @@
               </svg>
           </div>
     </div>
+<div class="modal-textarea">
+    <label class="modal-label" for="textarea">Comment
+     <textarea class="text-area" name="textarea" id="textarea" placeholder="Text input"></textarea>
+    </label>
+</div>
 
 
 
