--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     </div>
     <div class="footer-subscribe">
         <p class="footer-subscribe-title">Subscribe</p>
-        <form name="footer-form">
+        <form class="footer-form">
             <div class="footer-group">
             <label class="form-label">
                 <input class="footer-form-input" type="email" name="email" placeholder="E-mail" required />
@@ -415,9 +415,9 @@
 <p class="modal-text">Leave your contacts and we will call you back</p>
 <form class="modal-form">
     <div class="form-field">
-        <label class="modal-label" for="username">Name</label>
+        <label class="modal-label" for="user-name">Name</label>
           <div class="input-wrapper">
-            <input class="form-input" name="username" id="username" type="text" />
+            <input class="form-input" name="user-name" id="user-name" type="text" />
              <svg class="form-icon" width="18" height="24">
                <use href="./images/icons.svg#icon-person"></use>
              </svg>
@@ -442,12 +442,11 @@
           </div>
     </div>
 <div class="modal-textarea">
-    <label class="modal-label" for="textarea">Comment
-     <textarea class="form-textarea" name="description" id="textarea" placeholder="Text input"></textarea>
-    </label>
+    <label class="modal-label" for="user-comment">Comment</label>
+     <textarea class="form-textarea" name="user-comment" id="user-comment" placeholder="Text input"></textarea>
 </div>
 <div class="modal-checkbox">
-     <input class="input-checkbox visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" />
+     <input class="input-checkbox visually-hidden" type="checkbox" name="user-privacy" id="user-privacy" value="true" />
        <label class="checkbox-label" for="user-privacy">
          <span class="checkbox-span">
             <svg class="checkbox-svg" width="10" height="8">
